[ADD] training_arkana: day 2 [2]

--- a/training_arkana/views/res_partner_view.xml
+++ b/training_arkana/views/res_partner_view.xml
@@ -87,6 +87,7 @@
                 <field name="name" />
                 <field name="phone" />
                 <field name="email" />
+                <field name="country_id" />
             </tree>
         </field>
     </record>
@@ -109,6 +110,7 @@
                             <field name="name" required="1" />
                             <field name="phone" required="1" />
                             <field name="email" required="1" />
+                            <field name="country_id" />
                         </group>
                     </group>
                 </sheet>
@@ -131,6 +133,8 @@
                 <field name="name" />
                 <field name="phone" />
                 <field name="email" />
+                <filter string="Indonesia" name="country_ID" domain="[('country_id', '=', 'ID')]"/>
+                <filter string="Country" name="country_id" context="{'group_by':'country_id'}"/>
             </search>
         </field>
     </record>
