--- a/training_arkana_day3/views/training_class_view.xml
+++ b/training_arkana_day3/views/training_class_view.xml
@@ -67,6 +67,16 @@
                             <field name="currency_symbol" />
                         </group>
                     </group>
+                    <notebook>
+                        <page name="Attendances">
+                            <field name="attendance_ids">
+                                <tree editable="bottom">
+                                    <field name="attender" />
+                                    <field name="present" />
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
                 </sheet>
             </form>
         </field>
