[UPD] training_arkana_day4: add button

--- a/training_arkana_day4/views/training_class_view.xml
+++ b/training_arkana_day4/views/training_class_view.xml
@@ -20,6 +20,9 @@
             <field name="max_duration" position="before">
                 <field name="max_pertemuan" />
             </field>
+            <field name="state" position="before">
+                <button string="Confirm" name="action_state_confirm" type="object" class="oe_highlight" attrs="{'invisible': [('state', '!=', 'draft')]}" />
+            </field>
         </field>
     </record>
 
